--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "bcrypt": "^5.0.0",
     "config": "^3.3.3",
     "express": "^4.16.2",
+    "express-async-errors": "^3.1.1",
     "fawn": "^2.1.5",
     "joi": "^13.1.0",
     "joi-objectid": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mongoose": "^5.11.9"
+    "mongoose": "^5.11.9",
+    "winston": "^2.4.0",
+    "winston-mongodb": "^3.0.0"
   }
 }
