--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll --coverage --maxWorkers=1 --verbose"
   },
   "keywords": [],
   "author": "",
